--- a/array.html
+++ b/array.html
@@ -39,6 +39,8 @@
         debug6.innerText = data.join(" | ");
         // [A, 1, 2, 3]
 
+        // splice : 代替現在這個位置
+        // 所以新增是新增在前面
         data.splice(2, 1, 9, 6);
         debug7.innerText = data.join(" | ");
         // [A, 1, 9, 6, 3]
@@ -47,6 +49,7 @@
         debug8.innerText = data.join(" | ");
         // [A, 1, 6, 3]
 
+        // [A, 1, xxxxx6, 3]
         data.splice(2, 0, "B");
         debug9.innerText = data.join(" | ");
         // [A, 1, B, 6, 3]
