--- a/array.html
+++ b/array.html
@@ -21,6 +21,8 @@
     <div id="debug12"></div>
     <div id="debug13"></div>
     <div id="debug14"></div>
+    <div id="debug15"></div>
+    <div id="debug16"></div>
 
     <script>
         debug.innerText = 'OK';
@@ -89,12 +91,40 @@
         });
         // var dataList4 = data4.filter( x => x % 2 == 0 );
         debug13.innerText = dataList4.toString();
-
-        // array1.concat(array2, array3, ...); : 合併, [array1, array2, array3, ...]
         var evenData = [0, 2, 4, 6, 8];
         var oddData = [1, 3, 5, 7, 9];
         var data5 = evenData.concat(oddData);
+        // var data5 = [...evenData, ...oddData]
         debug14.innerText = data5.toString();
+
+        // .sort(); : 排序(小到大)
+        var data6 = [3, 0, 1, 8, 7, 2, 5, 4, 9, 6];
+        data6.sort();
+        debug15.innerText = data6.toString();
+
+        // 排序 : 大到小
+        var data7 = [3, 0, 1, 8, 7, 2, 5, 4, 9, 6];
+        data7.sort(function(a,b){
+            return b - a;
+        });
+        debug16.innerText = data7.toString();
+
+        // 若2最大
+        var data8 = [3, 0, 1, 8, 7, 2, 5, 4, 9, 6];
+        data8.sort(function(a,b){
+            // (0, 3) (1, 0) ...
+            console.log(a,b);
+            // 先把2移到最後
+            if (a == 2){
+                return 1;
+            }else if (b == 2){
+                return -1;
+            // 剩下的由小到大排序
+            }else{
+                return a - b;
+            }
+        });
+
     </script>
 </body>
 </html>
