--- a/array.html
+++ b/array.html
@@ -23,6 +23,7 @@
     <div id="debug14"></div>
     <div id="debug15"></div>
     <div id="debug16"></div>
+    <div id="debug17"></div>
 
     <script>
         debug.innerText = 'OK';
@@ -124,7 +125,7 @@
                 return a - b;
             }
         });
-
+        debug17.innerText = data8.toString();
     </script>
 </body>
 </html>
