--- a/class.html
+++ b/class.html
@@ -49,7 +49,15 @@
         objBox.paint("Blue");
         debug4.innerHTML = objBox.color;
 
-        
+        // class
+        class Animal {
+            // 不用加上function
+            makeSound(){
+                alert("Animal: ...");
+            }
+        }
+        let obj2 = new Animal();
+        obj2.makeSound();
     </script>
 </body>
 </html>
