--- a/class.html
+++ b/class.html
@@ -49,7 +49,7 @@
         objBox.paint("Blue");
         debug4.innerHTML = objBox.color;
 
-        // class
+        // class : 很像function
         class Animal {
             // 不用加上function
             makeSound(){
