class : 新增類別函式

--- a/class.html
+++ b/class.html
@@ -55,9 +55,14 @@
             makeSound(){
                 alert("Animal: ...");
             }
+
+            move(step){
+                alert("It walk " + step + " steps");
+            }
         }
         let obj2 = new Animal();
         obj2.makeSound();
+        obj2.move(6);
     </script>
 </body>
 </html>
