--- a/class.html
+++ b/class.html
@@ -52,9 +52,10 @@
         // class : 很像function
         class Animal {
             // constructor : 在new時就會執行一次, 用於初始化
-            constructor() {
+            constructor(weightValue) {
                 // 加上_比較像是告訴大家不要用
                 this._weight = 1;
+                this.weight = weightValue;
             }
 
             // get, set 通常是一組
@@ -65,7 +66,6 @@
 
             // set : 設定資料的值
             set weight(value){
-                alert(value);
                 if (value > 0){
                     this._weight = value;
                 }
@@ -80,12 +80,29 @@
                 alert("It walk " + step + " steps");
             }
         }
-        let obj2 = new Animal();
+
+        // extends : 類似的類別, 繼承父階, 更改少部分不同
+        class Dog extends Animal {
+            // 要先處理父階
+            constructor(weightValue, locationName){
+                super(weightValue);
+                this.location = locationName
+            }
+            makeSound(){
+                // super : 使用父階的內容
+                super.makeSound();
+                alert("Animal: Wang!");
+            }
+        }
+
+        let obj2 = new Animal(10);
         obj2.makeSound();
         obj2.move(6);
-        obj2.weight = 100;
-        obj2.weight = -3;
         alert(obj2.weight);
+
+        let obj3 = new Dog(3, "台中");
+        obj3.makeSound();
+        alert(obj3.location)
     </script>
 </body>
 </html>
