class : 處理父階問題

--- a/class.html
+++ b/class.html
@@ -83,7 +83,7 @@
 
         // extends : 類似的類別, 繼承父階, 更改少部分不同
         class Dog extends Animal {
-            // 要先處理父階
+            // 要先處理父階, this的原因
             constructor(weightValue, locationName){
                 super(weightValue);
                 this.location = locationName
